valid on-call-webapp-alert

--- a/clusters/moo-cluster/flux-system/on-call-webapp-alert.yaml
+++ b/clusters/moo-cluster/flux-system/on-call-webapp-alert.yaml
@@ -22,5 +22,5 @@ spec:
       name: '*'
     - kind: ImagePolicy
       name: '*'
-    - kind: ImageRepo
+    - kind: ImageRepository
       name: '*'
