--- a/clusters/moo-cluster/metallb/infrastructure.yaml
+++ b/clusters/moo-cluster/metallb/infrastructure.yaml
@@ -13,7 +13,7 @@ spec:
   validation: client
   healthChecks:
     - apiVersion: apps/v1
-      kind: deployment
+      kind: Deployment
       name: metallb-operator-controller-manager
       namespace: metallb-system
 ---
