--- a/apps/jenkins/helmrelease.yaml
+++ b/apps/jenkins/helmrelease.yaml
@@ -28,7 +28,7 @@ spec:
         apiVersion: networking.k8s.io/v1
         hostName: jenkins.hephy.pro
         annotations:
-          # cert-manager.io/cluster-issuer: letsencrypt-production
+          cert-manager.io/cluster-issuer: letsencrypt-production
           kubernetes.io/ingress.class: nginx
         tls:
           - secretName: jenkins.hephy.pro
