two receivers for gitno.hephy.pro ingress
There should be a separate receiver for the ImageRepo and GitRepo,
(though both can use the same secret, service, and ingress.)

--- a/clusters/moo-cluster/flux-system/kustomization.yaml
+++ b/clusters/moo-cluster/flux-system/kustomization.yaml
@@ -6,7 +6,9 @@ resources:
 # - cert-manager-sync.yaml
 - slack-notification.yaml
 - gitno-hephy-pro-ingress.yaml
-- webhook-receiver.yaml
+- git-webhook-receiver.yaml
+- image-webhook-receiver.yaml
+- receiver-service.yaml
 - on-call-webapp-alert.yaml
 patchesStrategicMerge:
 - gotk-patches.yaml
