--- a/clusters/moo-cluster/flux-system/gitno-hephy-pro-ingress.yaml
+++ b/clusters/moo-cluster/flux-system/gitno-hephy-pro-ingress.yaml
@@ -17,7 +17,7 @@ spec:
         pathType: Prefix
         backend:
           service:
-            name: receiver
+            name: webhook-receiver
             port:
               number: 80
   tls:
