--- a/clusters/moo-cluster/local-path-provisioner/kustomization.yaml
+++ b/clusters/moo-cluster/local-path-provisioner/kustomization.yaml
@@ -2,6 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
 - https://raw.githubusercontent.com/rancher/local-path-provisioner/v0.0.20/deploy/local-path-storage.yaml
+- infrastructure.yaml
 patchesStrategicMerge:
 - |-
   apiVersion: storage.k8s.io/v1
