--- a/clusters/moo-cluster/cert-manager/infrastructure.yaml
+++ b/clusters/moo-cluster/cert-manager/infrastructure.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   dependsOn:
     - name: flux-system
-  interval: 10m0s
+  interval: 11h59m11s
   path: ./infrastructure/cert-manager
   prune: true
   sourceRef:
@@ -36,7 +36,7 @@ metadata:
 spec:
   dependsOn:
     - name: cert-manager
-  interval: 10m0s
+  interval: 11h3m40s
   path: ./infrastructure/cert-manager-issuers
   prune: true
   sourceRef:
