make space for internal certs and cluster-issuer
Jenkins has a public webhook 'secondary ingress' feature that we can
take advantage of, though it is not a problem for now to have the main
ingress out on the public internet (as it is secured by GitHub OAuth.)

--- a/apps/jenkins/helmrelease.yaml
+++ b/apps/jenkins/helmrelease.yaml
@@ -32,11 +32,23 @@ spec:
         hostName: jenkins.hephy.pro
         annotations:
           cert-manager.io/cluster-issuer: letsencrypt-production
+          # cert-manager.io/cluster-issuer: letsencrypt-internal
           kubernetes.io/ingress.class: nginx
         tls:
           - secretName: jenkins.hephy.pro
             hosts:
               - jenkins.hephy.pro
+      # secondaryIngress:
+      #   enabled: true
+      #   apiVersion: networking.k8s.io/v1
+      #   hostName: jenkins.hephy.pro
+      #   annotations:
+      #     cert-manager.io/cluster-issuer: letsencrypt-public
+      #   tls:
+      #     - secretName: jenkins.hephy.pro
+      #       hosts:
+      #         - jenkins.hephy.pro
+
       JCasC:
         defaultConfig: false
         configScripts:
