increase / stagger intervals for metallb infra

--- a/clusters/moo-cluster/metallb/infrastructure.yaml
+++ b/clusters/moo-cluster/metallb/infrastructure.yaml
@@ -4,7 +4,7 @@ metadata:
   name: metallb
   namespace: flux-system
 spec:
-  interval: 10m
+  interval: 11h59m11s
   sourceRef:
     kind: GitRepository
     name: flux-system
@@ -25,7 +25,7 @@ metadata:
 spec:
   dependsOn:
     - name: metallb
-  interval: 5m
+  interval: 11h3m40s
   sourceRef:
     kind: GitRepository
     name: flux-system
