--- a/clusters/moo-cluster/flux-system/on-call-webapp-alert.yaml
+++ b/clusters/moo-cluster/flux-system/on-call-webapp-alert.yaml
@@ -7,6 +7,7 @@ spec:
   providerRef:
     name: slack
   eventSeverity: info
+  summary: moo-cluster
   eventSources:
     - kind: GitRepository
       name: '*'
