--- a/apps/jenkins/helmrelease.yaml
+++ b/apps/jenkins/helmrelease.yaml
@@ -20,7 +20,7 @@ spec:
   values:
     persistence:
       enabled: true
-      # existingClaim: jenkins-precreated
+      existingClaim: jenkins-precreated
     controller:
       image: kingdonb/jenkins # {"$imagepolicy": "flux-system:jenkins:image"}
       tag: lts-89867f5f-1629815575 # {"$imagepolicy": "flux-system:jenkins:tag"}
