--- a/infrastructure/ingress-nginx/helmrelease.yaml
+++ b/infrastructure/ingress-nginx/helmrelease.yaml
@@ -4,16 +4,16 @@ metadata:
   name: ingress-nginx
   namespace: ingress-nginx
 spec:
-  interval: 5m
+  interval: 45m
   chart:
     spec:
       chart: ingress-nginx
-      version: '^4.0.0-0'
+      version: '^4.0.1'
       sourceRef:
         kind: HelmRepository
         name: ingress-nginx
         namespace: flux-system
-      interval: 1m
+      interval: 15m
   values:
     controller:
       extraArgs:
