--- a/infrastructure/ingress-nginx/helmrepo.yaml
+++ b/infrastructure/ingress-nginx/helmrepo.yaml
@@ -4,5 +4,5 @@ metadata:
   name: ingress-nginx
   namespace: flux-system
 spec:
-  interval: 30m
+  interval: 1h
   url: https://kubernetes.github.io/ingress-nginx
