maybe it's this missing credential causing problem

--- a/apps/jenkins/helmrelease.yaml
+++ b/apps/jenkins/helmrelease.yaml
@@ -85,13 +85,13 @@ spec:
           #               id: "f9faa7da-c0d1-45e7-aa59-8e52c37e70a9"
           #               scope: GLOBAL
           #               secret: "${github-token-2}"
-          github-server: |
-            unclassified:
-              gitHubPluginConfig:
-                configs:
-                - credentialsId: "869e0f2f-1f21-464e-9597-369fa246d4c1"
-                  name: "GitHub"
-                hookUrl: "https://jenkins.hephy.pro/github-webhook/"
+          # github-server: |
+          #   unclassified:
+          #     gitHubPluginConfig:
+          #       configs:
+          #       - credentialsId: "869e0f2f-1f21-464e-9597-369fa246d4c1"
+          #         name: "GitHub"
+          #       hookUrl: "https://jenkins.hephy.pro/github-webhook/"
           github-oauth: |
             jenkins:
               securityRealm:
