--- a/apps/jenkins/helmrelease.yaml
+++ b/apps/jenkins/helmrelease.yaml
@@ -5,6 +5,7 @@ metadata:
   namespace: flux-system
 spec:
   interval: 5m
+  timeout: 1m
   releaseName: jenkins
   targetNamespace: jenkins
   storageNamespace: jenkins
@@ -20,7 +21,7 @@ spec:
   values:
     persistence:
       enabled: true
-      existingClaim: jenkins-precreated
+      # existingClaim: jenkins-precreated
     controller:
       image: kingdonb/jenkins # {"$imagepolicy": "flux-system:jenkins:image"}
       tag: lts-5e65f3a9-1629826827 # {"$imagepolicy": "flux-system:jenkins:tag"}
@@ -52,13 +53,45 @@ spec:
       JCasC:
         defaultConfig: false
         configScripts:
-          github-server: |
-            unclassified:
-              gitHubPluginConfig:
-                configs:
-                - credentialsId: "869e0f2f-1f21-464e-9597-369fa246d4c1"
-                  name: "GitHub"
-                hookUrl: "https://jenkins.hephy.pro/github-webhook/"
+          # kubernetes-secret-credentials: |
+          #   system:
+          #     domainCredentials:
+          #       credentials:
+          #       # must be 4 spaced after this point
+          #           - usernamePassword:
+          #               description: "Github Token (kingdonb)"
+          #               id: "4a8e65ee-b8a3-4e4d-ab9a-b7783fd17243"
+          #               password: "${github-token-1}"
+          #               scope: GLOBAL
+          #               username: "kingdonb"
+          #           - usernamePassword:
+          #               description: "Github Token (kingdonb) - org-wide"
+          #               id: "9c4638e0-4ed9-48c6-b0e1-38550d345448"
+          #               password: "${github-token-2}"
+          #               scope: GLOBAL
+          #               username: "kingdonb"
+          #           - gitHubApp:
+          #               appID: "133546"
+          #               description: "Jenkins.Hephy.Pro GitHub App"
+          #               id: "24d0d1a8-7b10-436c-a959-8c1d667a4653"
+          #               privateKey: "${github-app-privkey}"
+          #           - string:
+          #               description: "kingdonb GitHub Token (Plain Text)"
+          #               id: "869e0f2f-1f21-464e-9597-369fa246d4c1"
+          #               scope: GLOBAL
+          #               secret: "${github-token-1}"
+          #           - string:
+          #               description: "kingdonb GitHub Token (Plain Text) - Broader Access"
+          #               id: "f9faa7da-c0d1-45e7-aa59-8e52c37e70a9"
+          #               scope: GLOBAL
+          #               secret: "${github-token-2}"
+          # github-server: |
+          #   unclassified:
+          #     gitHubPluginConfig:
+          #       configs:
+          #       - credentialsId: "869e0f2f-1f21-464e-9597-369fa246d4c1"
+          #         name: "GitHub"
+          #       hookUrl: "https://jenkins.hephy.pro/github-webhook/"
           github-oauth: |
             jenkins:
               securityRealm:
@@ -66,7 +99,7 @@ spec:
                   githubWebUri: "https://github.com"
                   githubApiUri: "https://api.github.com"
                   clientID: "b4424bc483948a93d4d3"
-                  clientSecret: "${jenkins-github-secret-token}"
+                  clientSecret: "${jenkins-github-oauth-secret-token}"
                   oauthScopes: "read:org,user:email"
               authorizationStrategy:
                 github:
@@ -139,4 +172,10 @@ spec:
                     yamlMergeStrategy: "override"
       additionalExistingSecrets:
         - name: jenkins-github
-          keyName: secret-token
+          keyName: oauth-secret-token
+        - name: jenkins-github
+          keyName: github-token-1
+        - name: jenkins-github
+          keyName: github-token-2
+        - name: jenkins-github
+          keyName: github-app-privkey
