must be RFC 1123
Pod "jenkins-0" is invalid: [spec.volumes[6].name: Invalid value: "docker-registry-admin-DOCKER_REPO_USER": a lowercase RFC 1123 label must consist of lower case alphanumeric characters or '-', and must start and end with an alphanumeric character (e.g. 'my-name',  or '123-abc', regex used for validation is '[a-z0-9]([-a-z0-9]*[a-z0-9])?'), spec.volumes[7].name: Invalid value: "docker-registry-admin-DOCKER_REPO_PASSWORD": a lowercase RFC 1123 label must consist of lower case alphanumeric characters or '-', and must start and end with an alphanumeric character (e.g. 'my-name',  or '123-abc', regex used for validation is '[a-z0-9]([-a-z0-9]*[a-z0-9])?'), spec.containers[0].volumeMounts[9].name: Not found: "docker-registry-admin-DOCKER_REPO_USER", spec.containers[0].volumeMounts[10].name: Not found: "docker-registry-admin-DOCKER_REPO_PASSWORD"]

--- a/apps/jenkins/helmrelease.yaml
+++ b/apps/jenkins/helmrelease.yaml
@@ -62,9 +62,9 @@ spec:
                       - usernamePassword:
                           description: "Docker Registry Push (kingdonb)"
                           id: "docker-registry-admin"
-                          password: "${docker-registry-admin-DOCKER_REPO_PASSWORD}"
+                          password: "${docker-registry-admin-docker-repo-password}"
                           scope: GLOBAL
-                          username: "${docker-registry-admin-DOCKER_REPO_USER}"
+                          username: "${docker-registry-admin-docker-repo-user}"
                       - usernamePassword:
                           description: "Github Token (kingdonb)"
                           id: "4a8e65ee-b8a3-4e4d-ab9a-b7783fd17243"
@@ -189,6 +189,6 @@ spec:
         - name: jenkins-github
           keyName: github-app-privkey
         - name: docker-registry-admin
-          keyName: DOCKER_REPO_USER
+          keyName: docker-repo-user
         - name: docker-registry-admin
-          keyName: DOCKER_REPO_PASSWORD
+          keyName: docker-repo-password
