--- a/apps/jenkins/helmrelease.yaml
+++ b/apps/jenkins/helmrelease.yaml
@@ -53,6 +53,20 @@ spec:
       JCasC:
         defaultConfig: false
         configScripts:
+          kingdon-ci-org-folder: |
+            jobs:
+              - script: >
+                organizationFolder("kingdon-ci") {
+                  description("configured with JCasC")
+                  displayName("Kingdon-CI")
+
+                  organizations {
+                    github {
+                      repoOwner("kingdon-ci")
+                      credentialsId("f9faa7da-c0d1-45e7-aa59-8e52c37e70a9")
+                    }
+                  }
+                }
           kubernetes-secret-credentials: |
             credentials:
               system:
