--- a/apps/jenkins/helmrelease.yaml
+++ b/apps/jenkins/helmrelease.yaml
@@ -63,6 +63,7 @@ spec:
                     organizations {
                       github {
                         repoOwner("kingdon-ci")
+                        apiUri("https://api.github.com")
                         credentialsId("9c4638e0-4ed9-48c6-b0e1-38550d345448")
                       }
                     }
