also discover pull requests

--- a/apps/jenkins/helmrelease.yaml
+++ b/apps/jenkins/helmrelease.yaml
@@ -76,6 +76,9 @@ spec:
                     }
                     configure {
                       def traits = it / sources / data / 'jenkins.branch.BranchSource' / source / traits
+                      traits << 'org.jenkinsci.plugins.github__branch__source.OriginPullRequestDiscoveryTrait' {
+                        strategyId(1)
+                      }
                       traits << 'org.jenkinsci.plugins.github__branch__source.BranchDiscoveryTrait' {
                         strategyId(3)
                       }
