--- a/apps/jenkins/helmrelease.yaml
+++ b/apps/jenkins/helmrelease.yaml
@@ -70,14 +70,19 @@ spec:
                           gitHubBranchDiscovery {
                             strategyId(1)
                           }
-                          gitHubPullRequestDiscovery {
-                            strategyId(1)
-                          }
+                          // gitHubPullRequestDiscovery {
+                          //   strategyId(1)
+                          // }
                           pruneStaleBranchTrait()
                         }
                       }
                     }
                     configure {
+
+                      def traits = it / sources / data / 'jenkins.branch.BranchSource' / source / traits
+                      traits << 'org.jenkinsci.plugins.github__branch__source.OriginPullRequestDiscoveryTrait' {
+                        strategyId(1)
+                      }
 
                       // scan all repos at least once a day
                       def triggers = it / 'triggers'
