--- a/apps/jenkins/helmrelease.yaml
+++ b/apps/jenkins/helmrelease.yaml
@@ -70,18 +70,14 @@ spec:
                           gitHubBranchDiscovery {
                             strategyId(1)
                           }
-                          // gitHubPullRequestDiscovery {
-                          //   strategyId(1)
-                          // }
                           pruneStaleBranchTrait()
                         }
                       }
                     }
                     configure {
-
-                      def traits = it / sources / data / 'jenkins.branch.BranchSource' / source / traits
-                      traits << 'org.jenkinsci.plugins.github__branch__source.OriginPullRequestDiscoveryTrait' {
-                        strategyId(1)
+                        def traits = it / navigators / 'org.jenkinsci.plugins.github__branch__source.GitHubSCMNavigator' / traits
+                        traits << 'org.jenkinsci.plugins.github__branch__source.OriginPullRequestDiscoveryTrait' {
+                        strategyId 1
                       }
 
                       // scan all repos at least once a day
