--- a/persistence/gitea-postgres-0-pvc-pv.yaml
+++ b/persistence/gitea-postgres-0-pvc-pv.yaml
@@ -1,24 +1,24 @@
-apiVersion: v1
-kind: PersistentVolume
-metadata:
-  annotations:
-    pv.kubernetes.io/provisioned-by: rancher.io/local-path
-  name: pvc-c3439e3d-b5f3-462f-b787-18c11d43847e
-spec:
-  accessModes:
-  - ReadWriteOnce
-  capacity:
-    storage: 10Gi
-  persistentVolumeReclaimPolicy: Retain
-  hostPath:
-    path: /opt/local-path-provisioner/pvc-c3439e3d-b5f3-462f-b787-18c11d43847e_gitea_data-gitea-postgresql-0
-    type: DirectoryOrCreate
-  nodeAffinity:
-    required:
-      nodeSelectorTerms:
-      - matchExpressions:
-        - key: kubernetes.io/hostname
-          operator: In
-          values:
-          - moo
-  storageClassName: local-path
+# apiVersion: v1
+# kind: PersistentVolume
+# metadata:
+#   annotations:
+#     pv.kubernetes.io/provisioned-by: rancher.io/local-path
+#   name: pvc-c3439e3d-b5f3-462f-b787-18c11d43847e
+# spec:
+#   accessModes:
+#   - ReadWriteOnce
+#   capacity:
+#     storage: 10Gi
+#   persistentVolumeReclaimPolicy: Retain
+#   hostPath:
+#     path: /opt/local-path-provisioner/pvc-c3439e3d-b5f3-462f-b787-18c11d43847e_gitea_data-gitea-postgresql-0
+#     type: DirectoryOrCreate
+#   nodeAffinity:
+#     required:
+#       nodeSelectorTerms:
+#       - matchExpressions:
+#         - key: kubernetes.io/hostname
+#           operator: In
+#           values:
+#           - moo
+#   storageClassName: local-path
