--- a/persistence/jenkins-pvc-pv.yaml
+++ b/persistence/jenkins-pvc-pv.yaml
@@ -1,24 +1,24 @@
-apiVersion: v1
-kind: PersistentVolume
-metadata:
-  annotations:
-    pv.kubernetes.io/provisioned-by: rancher.io/local-path
-  name: pvc-89e89767-2eb8-4e2c-97bb-341d445c1c75
-spec:
-  accessModes:
-  - ReadWriteOnce
-  capacity:
-    storage: 8Gi
-  persistentVolumeReclaimPolicy: Retain
-  hostPath:
-    path: /opt/local-path-provisioner/pvc-89e89767-2eb8-4e2c-97bb-341d445c1c75_jenkins_jenkins
-    type: DirectoryOrCreate
-  nodeAffinity:
-    required:
-      nodeSelectorTerms:
-      - matchExpressions:
-        - key: kubernetes.io/hostname
-          operator: In
-          values:
-          - moo
-  storageClassName: local-path
+# apiVersion: v1
+# kind: PersistentVolume
+# metadata:
+#   annotations:
+#     pv.kubernetes.io/provisioned-by: rancher.io/local-path
+#   name: pvc-89e89767-2eb8-4e2c-97bb-341d445c1c75
+# spec:
+#   accessModes:
+#   - ReadWriteOnce
+#   capacity:
+#     storage: 8Gi
+#   persistentVolumeReclaimPolicy: Retain
+#   hostPath:
+#     path: /opt/local-path-provisioner/pvc-89e89767-2eb8-4e2c-97bb-341d445c1c75_jenkins_jenkins
+#     type: DirectoryOrCreate
+#   nodeAffinity:
+#     required:
+#       nodeSelectorTerms:
+#       - matchExpressions:
+#         - key: kubernetes.io/hostname
+#           operator: In
+#           values:
+#           - moo
+#   storageClassName: local-path
