--- a/apps/podinfo/kustomization.yaml
+++ b/apps/podinfo/kustomization.yaml
@@ -2,5 +2,8 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 bases:
   - github.com/stefanprodan/podinfo//kustomize
+  - apps-podinfo-automation.yaml
+  - podinfo-policy.yaml
+  - stefanprodan-podinfo-registry.yaml
 patchesStrategicMerge:
   - patch.yaml
