--- a/apps/podinfo/podinfo-policy.yaml
+++ b/apps/podinfo/podinfo-policy.yaml
@@ -7,6 +7,7 @@ metadata:
 spec:
   imageRepositoryRef:
     name: stefanprodan-podinfo
+  interval: 74h0m
   policy:
     semver:
       range: ^6.0.0
