persistence kustomization is invalid
there is no persistence passed in (this is intentional)

--- a/clusters/moo-cluster/local-path-provisioner/infrastructure.yaml
+++ b/clusters/moo-cluster/local-path-provisioner/infrastructure.yaml
@@ -5,6 +5,7 @@ metadata:
   namespace: flux-system
 spec:
   interval: 10m
+  suspend: true
   sourceRef:
     kind: GitRepository
     name: flux-system
