--- a/apps/gitea/helmrelease.yaml
+++ b/apps/gitea/helmrelease.yaml
@@ -25,3 +25,17 @@ spec:
       persistence:
         enabled: true
        #existingClaim: data-gitea-postgresql-0
+    ingress:
+      enabled: true
+      annotations:
+        cert-manager.io/cluster-issuer: letsencrypt-production
+        kubernetes.io/ingress.class: nginx
+      hosts:
+        - host: gitea.hephy.pro
+      paths:
+        - path: /
+          pathType: Prefix
+      tls:
+        - secretName: gitea-hephy-pro
+          hosts:
+            - gitea.hephy.pro
