do not set the admin:admin
we have a real (production) MariaDB database backend enabled now, so a
safer admin password has been set

--- a/infrastructure/keycloak/kustomization.yaml
+++ b/infrastructure/keycloak/kustomization.yaml
@@ -30,9 +30,9 @@ patchesStrategicMerge:
           - secretRef:
               name: keycloak-db-pass
           env:
-          - name: KEYCLOAK_USER
-            value: "admin"
-          - name: KEYCLOAK_PASSWORD
-            value: "admin"
+         #- name: KEYCLOAK_USER
+         #  value: "admin"
+         #- name: KEYCLOAK_PASSWORD
+         #  value: "admin"
           - name: PROXY_ADDRESS_FORWARDING
             value: "true"
