let's go with the uuid

--- a/infrastructure/kube-oidc-proxy/helmrelease.yaml
+++ b/infrastructure/kube-oidc-proxy/helmrelease.yaml
@@ -21,7 +21,7 @@ spec:
     oidc:
       clientId: kube-oidc-proxy
       issuerUrl: https://keycloak.hephy.pro/auth/realms/hephymoo
-      usernameClaim: prefered_name
+      usernameClaim: sub
     
     extraArgs:
       v: 10
