move jenkins namespace outside of infra
my-secrets kustomization should be able to produce secrets in here

--- a/apps/jenkins/kustomization.yaml
+++ b/apps/jenkins/kustomization.yaml
@@ -4,7 +4,7 @@ resources:
 ## Basic Jenkins installation
 - helmrepo.yaml
 - helmrelease.yaml
-- namespace.yaml
+# - namespace.yaml
 
 ## Flux Automations
 - apps-jenkins-automation.yaml
