--- a/apps/gitea/helmrelease.yaml
+++ b/apps/gitea/helmrelease.yaml
@@ -20,11 +20,11 @@ spec:
   values:
     persistence:
       enabled: true
-     #existingClaim: data-gitea-0
+      existingClaim: data-gitea-0
     postgresql:
       persistence:
         enabled: true
-       #existingClaim: data-gitea-postgresql-0
+        existingClaim: data-gitea-postgresql-0
     ingress:
       enabled: true
       annotations:
