--- a/persistence/gitea-postgres-0-pvc.yaml
+++ b/persistence/gitea-postgres-0-pvc.yaml
@@ -1,20 +1,20 @@
-# apiVersion: v1
-# kind: PersistentVolumeClaim
-# metadata:
-#   annotations:
-#     volume.beta.kubernetes.io/storage-provisioner: rancher.io/local-path
-#     volume.kubernetes.io/selected-node: moo
-#   labels:
-#     app.kubernetes.io/instance: gitea
-#     app.kubernetes.io/name: postgresql
-#     role: primary
-#   name: data-gitea-postgresql-0
-#   namespace: gitea
-# spec:
-#   accessModes:
-#   - ReadWriteOnce
-#   resources:
-#     requests:
-#       storage: 10Gi
-#   storageClassName: local-path
-#   volumeName: pvc-c3439e3d-b5f3-462f-b787-18c11d43847e
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  annotations:
+    volume.beta.kubernetes.io/storage-provisioner: rancher.io/local-path
+    volume.kubernetes.io/selected-node: moo
+  labels:
+    app.kubernetes.io/instance: gitea
+    app.kubernetes.io/name: postgresql
+    role: primary
+  name: data-gitea-postgresql-0
+  namespace: gitea
+spec:
+  accessModes:
+  - ReadWriteOnce
+  resources:
+    requests:
+      storage: 10Gi
+  storageClassName: local-path
+  volumeName: pvc-c3439e3d-b5f3-462f-b787-18c11d43847e
