configure gitea server with non-default admin pw

--- a/apps/gitea/helmrelease.yaml
+++ b/apps/gitea/helmrelease.yaml
@@ -19,6 +19,8 @@ spec:
       interval: 40m
   values:
     gitea:
+      admin:
+        existingSecret: gitea-admin-secret
       config:
         service:
           DISABLE_REGISTRATION: true
