commit to gitea branch

--- a/apps/jenkins/apps-jenkins-automation.yaml
+++ b/apps/jenkins/apps-jenkins-automation.yaml
@@ -15,7 +15,7 @@ spec:
         name: fluxcdbot
       messageTemplate: '{{range .Updated.Images}}{{println .}}{{end}}'
     push:
-      branch: main
+      branch: gitea
   interval: 168h0m0s
   sourceRef:
     kind: GitRepository
