--- a/apps/gitea/helmrepo.yaml
+++ b/apps/gitea/helmrepo.yaml
@@ -4,5 +4,5 @@ metadata:
   name: gitea-charts
   namespace: flux-system
 spec:
-  interval: 2m
+  interval: 18h24m
   url: https://dl.gitea.io/charts/
