suspend podinfo and gitea on next reconciliation

--- a/apps/gitea/helmrelease.yaml
+++ b/apps/gitea/helmrelease.yaml
@@ -4,6 +4,7 @@ metadata:
   name: gitea-srv
   namespace: flux-system
 spec:
+  suspend: true
   interval: 5m
   releaseName: gitea
   targetNamespace: gitea
