--- a/apps/gitea/helmrelease.yaml
+++ b/apps/gitea/helmrelease.yaml
@@ -36,7 +36,7 @@ spec:
       enabled: true
       annotations:
         cert-manager.io/cluster-issuer: letsencrypt-production
-        kubernetes.io/ingress.class: nginx
+        kubernetes.io/ingress.class: internal
       hosts:
         - host: gitea.hephy.pro
           paths:
