--- a/apps/jenkins/helmrelease.yaml
+++ b/apps/jenkins/helmrelease.yaml
@@ -45,7 +45,7 @@ spec:
         annotations:
           cert-manager.io/cluster-issuer: letsencrypt-production
           # cert-manager.io/cluster-issuer: letsencrypt-internal
-          kubernetes.io/ingress.class: nginx
+          kubernetes.io/ingress.class: internal
         tls:
           - secretName: jenkins.hephy.pro
             hosts:
