--- a/clusters/moo-cluster/flux-system/gitno-hephy-pro-ingress.yaml
+++ b/clusters/moo-cluster/flux-system/gitno-hephy-pro-ingress.yaml
@@ -4,7 +4,7 @@ metadata:
   name: webhook-receiver
   namespace: flux-system
   annotations:
-    kubernetes.io/ingress.class: "nginx"
+    kubernetes.io/ingress.class: "public"
     cert-manager.io/cluster-issuer: letsencrypt-production
     nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
     nginx.ingress.kubernetes.io/ssl-redirect: "false"
