--- a/infrastructure/keycloak/keycloak-ingress.yaml
+++ b/infrastructure/keycloak/keycloak-ingress.yaml
@@ -4,7 +4,7 @@ metadata:
   name: keycloak
   annotations:
     cert-manager.io/cluster-issuer: letsencrypt-production
-    kubernetes.io/ingress.class: nginx
+    kubernetes.io/ingress.class: internal
 spec:
   tls:
     - hosts:
