--- a/infrastructure/kube-oidc-proxy/helmrelease.yaml
+++ b/infrastructure/kube-oidc-proxy/helmrelease.yaml
@@ -31,7 +31,7 @@ spec:
       annotations:
         cert-manager.io/cluster-issuer: letsencrypt-production
         nginx.ingress.kubernetes.io/backend-protocol: HTTPS
-        kubernetes.io/ingress.class: nginx
+        kubernetes.io/ingress.class: internal
       hosts:
         - host: kube.sso.moo.hephy.pro
           paths:
