--- a/apps/jenkins/helmrelease.yaml
+++ b/apps/jenkins/helmrelease.yaml
@@ -43,23 +43,23 @@ spec:
         apiVersion: networking.k8s.io/v1
         hostName: jenkins.hephy.pro
         annotations:
-          cert-manager.io/cluster-issuer: letsencrypt-production
-          # cert-manager.io/cluster-issuer: letsencrypt-internal
+          #cert-manager.io/cluster-issuer: letsencrypt-production
           kubernetes.io/ingress.class: internal
         tls:
           - secretName: jenkins.hephy.pro
             hosts:
               - jenkins.hephy.pro
-      # secondaryIngress:
-      #   enabled: true
-      #   apiVersion: networking.k8s.io/v1
-      #   hostName: jenkins.hephy.pro
-      #   annotations:
-      #     cert-manager.io/cluster-issuer: letsencrypt-public
-      #   tls:
-      #     - secretName: jenkins.hephy.pro
-      #       hosts:
-      #         - jenkins.hephy.pro
+      secondaryIngress:
+        enabled: true
+        apiVersion: networking.k8s.io/v1
+        hostName: jenkins.hephy.pro
+        annotations:
+          #cert-manager.io/cluster-issuer: letsencrypt-production
+          kubernetes.io/ingress.class: public
+        tls:
+          - secretName: jenkins.hephy.pro
+            hosts:
+              - jenkins.hephy.pro
 
       JCasC:
         defaultConfig: false
