ingressClassName is not an annotation
has not been for quite a while, I don't know if we were ever using
ingress classes before, or if we just had a default ?

--- a/apps/gitea/helmrelease.yaml
+++ b/apps/gitea/helmrelease.yaml
@@ -34,9 +34,10 @@ spec:
         existingClaim: data-gitea-postgresql-0
     ingress:
       enabled: true
+      ingressClassName: internal
       annotations:
         cert-manager.io/cluster-issuer: letsencrypt-production
-        kubernetes.io/ingress.class: internal
+        #kubernetes.io/ingress.class: internal
       hosts:
         - host: gitea.hephy.pro
           paths:
