--- a/apps/jenkins/helmrelease.yaml
+++ b/apps/jenkins/helmrelease.yaml
@@ -42,9 +42,10 @@ spec:
         enabled: true
         apiVersion: networking.k8s.io/v1
         hostName: jenkins.hephy.pro
+        ingressClassName: internal
         annotations:
           #cert-manager.io/cluster-issuer: letsencrypt-production
-          kubernetes.io/ingress.class: internal
+          #kubernetes.io/ingress.class: internal
         tls:
           - secretName: jenkins.hephy.pro
             hosts:
@@ -53,9 +54,10 @@ spec:
         enabled: true
         apiVersion: networking.k8s.io/v1
         hostName: jenkins.hephy.pro
+        ingressClassName: public
         annotations:
           #cert-manager.io/cluster-issuer: letsencrypt-production
-          kubernetes.io/ingress.class: public
+          #kubernetes.io/ingress.class: public
         tls:
           - secretName: jenkins.hephy.pro
             hosts:
