--- a/infrastructure/kube-oidc-proxy/helmrelease.yaml
+++ b/infrastructure/kube-oidc-proxy/helmrelease.yaml
@@ -28,10 +28,11 @@ spec:
     
     ingress:
       enabled: true
+      ingressClassName: internal
       annotations:
         cert-manager.io/cluster-issuer: letsencrypt-production
         nginx.ingress.kubernetes.io/backend-protocol: HTTPS
-        kubernetes.io/ingress.class: internal
+        #kubernetes.io/ingress.class: internal
       hosts:
         - host: kube.sso.moo.hephy.pro
           paths:
