each ingress only services its own ingressclass

--- a/infrastructure/ingress-nginx/internal-helmrelease.yaml
+++ b/infrastructure/ingress-nginx/internal-helmrelease.yaml
@@ -22,3 +22,5 @@ spec:
       ingressClassResource:
         name: internal
         default: true
+        parameters:
+          ingress-class: internal
