--- a/infrastructure/ingress-nginx/public-helmrelease.yaml
+++ b/infrastructure/ingress-nginx/public-helmrelease.yaml
@@ -24,3 +24,5 @@ spec:
       ingressClassResource:
         name: public
         default: false
+        parameters:
+          ingress-class: public
