separate ingresses - was so close
the ingressClassResource needs a unique setting for controllerValue

--- a/infrastructure/ingress-nginx/internal-helmrelease.yaml
+++ b/infrastructure/ingress-nginx/internal-helmrelease.yaml
@@ -23,3 +23,4 @@ spec:
       ingressClassResource:
         name: internal
         default: true
+        controllerValue: "k8s.io/ingress-nginx-internal"
