--- a/infrastructure/ingress-nginx/public-helmrelease.yaml
+++ b/infrastructure/ingress-nginx/public-helmrelease.yaml
@@ -25,3 +25,4 @@ spec:
       ingressClassResource:
         name: public
         default: false
+        controllerValue: "k8s.io/ingress-nginx-public"
