--- a/clusters/moo-cluster/local-path-provisioner/infrastructure.yaml
+++ b/clusters/moo-cluster/local-path-provisioner/infrastructure.yaml
@@ -13,3 +13,8 @@ spec:
   prune: false
   validation: client
   timeout: 5m0s
+  healthChecks:
+    - apiVersion: apps/v1
+      kind: Deployment
+      name: local-path-provisioner
+      namespace: local-path-storage
