--- a/apps/gitea/helmrelease.yaml
+++ b/apps/gitea/helmrelease.yaml
@@ -4,7 +4,7 @@ metadata:
   name: gitea-srv
   namespace: flux-system
 spec:
-  suspend: false
+  suspend: true
   interval: 5m
   releaseName: gitea
   targetNamespace: gitea
