this should not be in the way

--- a/clusters/moo-cluster/gitea/flux-kustomization.yaml
+++ b/clusters/moo-cluster/gitea/flux-kustomization.yaml
@@ -11,9 +11,10 @@ spec:
   sourceRef:
     kind: GitRepository
     name: flux-system
-  healthChecks:
-    - apiVersion: apps/v1
-      kind: StatefulSet
-      name: gitea
-      namespace: gitea
+  ## in lieu of suspending the whole ks, let's just suspend the health checks
+  # healthChecks:
+  #   - apiVersion: apps/v1
+  #     kind: StatefulSet
+  #     name: gitea
+  #     namespace: gitea
   timeout: 2m0s
