--- a/clusters/moo-cluster/jenkins/flux-kustomization.yaml
+++ b/clusters/moo-cluster/jenkins/flux-kustomization.yaml
@@ -12,6 +12,8 @@ spec:
     kind: GitRepository
     name: flux-system
   dependsOn:
+    - name: ingress-nginx
+      namespace: ingress-nginx
     - name: persistence
   healthChecks:
     - apiVersion: apps/v1
