reconcile this one after ingress-nginx

--- a/clusters/moo-cluster/cert-manager/infrastructure.yaml
+++ b/clusters/moo-cluster/cert-manager/infrastructure.yaml
@@ -36,6 +36,7 @@ metadata:
 spec:
   dependsOn:
     - name: cert-manager
+    - name: ingress-nginx
   interval: 11h3m40s
   path: ./infrastructure/cert-manager-issuers
   prune: true
