depends on flux-system first

--- a/clusters/moo-cluster/metallb/infrastructure.yaml
+++ b/clusters/moo-cluster/metallb/infrastructure.yaml
@@ -24,6 +24,7 @@ metadata:
   namespace: flux-system
 spec:
   dependsOn:
+    - name: flux-system
     - name: metallb
   interval: 11h3m40s
   sourceRef:
