--- a/clusters/moo-cluster/keycloak/infrastructure.yaml
+++ b/clusters/moo-cluster/keycloak/infrastructure.yaml
@@ -9,6 +9,8 @@ spec:
     kind: GitRepository
     name: flux-system
   path: ./infrastructure/keycloak
+  dependsOn:
+    - my-secrets
   prune: true
   validation: client
   healthChecks:
