fix validation error

--- a/clusters/moo-cluster/keycloak/infrastructure.yaml
+++ b/clusters/moo-cluster/keycloak/infrastructure.yaml
@@ -10,7 +10,7 @@ spec:
     name: flux-system
   path: ./infrastructure/keycloak
   dependsOn:
-    - my-secrets
+    - name: my-secrets
   prune: true
   validation: client
   healthChecks:
