also depends on ingress (webhooks)

--- a/clusters/moo-cluster/keycloak/infrastructure.yaml
+++ b/clusters/moo-cluster/keycloak/infrastructure.yaml
@@ -11,6 +11,7 @@ spec:
   path: ./infrastructure/keycloak
   dependsOn:
     - name: my-secrets
+    - name: ingress-nginx
   prune: true
   validation: client
   healthChecks:
