another honest-to-goodness dependency

--- a/clusters/moo-cluster/ingress-nginx/infrastructure.yaml
+++ b/clusters/moo-cluster/ingress-nginx/infrastructure.yaml
@@ -9,6 +9,9 @@ spec:
     kind: GitRepository
     name: flux-system
   path: ./infrastructure/ingress-nginx
+  dependsOn:
+    - name: metallb
+    - name: metallb-instance
   prune: true
   validation: client
   healthChecks:
