squash one last squawk from kube-oidc-proxy

--- a/clusters/moo-cluster/kube-oidc-proxy/infrastructure.yaml
+++ b/clusters/moo-cluster/kube-oidc-proxy/infrastructure.yaml
@@ -9,6 +9,10 @@ spec:
     kind: GitRepository
     name: flux-system
   path: ./infrastructure/kube-oidc-proxy
+  dependsOn:
+    - name: keycloak
+    - name: ingress-nginx
+    - name: my-secrets
   prune: true
   validation: client
   healthChecks:
