--- a/clusters/moo-cluster/jenkins/flux-kustomization.yaml
+++ b/clusters/moo-cluster/jenkins/flux-kustomization.yaml
@@ -14,6 +14,7 @@ spec:
   dependsOn:
     - name: ingress-nginx
     - name: persistence
+    - name: my-secrets
   healthChecks:
     - apiVersion: apps/v1
       kind: StatefulSet
