--- a/apps/openvpn-as/helmrelease.yaml
+++ b/apps/openvpn-as/helmrelease.yaml
@@ -10,15 +10,17 @@ spec:
   targetNamespace: openvpn
   storageNamespace: openvpn
   dependsOn:
+    - name: internal-ingress
+      namespace: ingress-nginx
     - name: public-ingress
       namespace: ingress-nginx
   chart:
     spec:
-      chart: openvpn-as
-      version: '^0.1.8'
+      chart: ./charts/openvpn-as
+      version: '^0.2.0'
       sourceRef:
-        kind: HelmRepository
-        name: stenic
+        kind: GitRepository
+        name: kingdonb-helm-charts-1
         namespace: flux-system
       interval: 40m
   values:
@@ -35,7 +37,7 @@ spec:
       gui:
         enabled: true
         hostName: vpn.hephy.pro
-        ingressClassName: public
+        ingressClassName: internal
         annotations: {}
           # kubernetes.io/ingress.class: nginx
           # kubernetes.io/tls-acme: "true"
@@ -45,7 +47,7 @@ spec:
       admin:
         enabled: true
         hostName: vpn-admin.hephy.pro
-        ingressClassName: public
+        ingressClassName: internal
         annotations: {}
           # kubernetes.io/ingress.class: nginx
           # kubernetes.io/tls-acme: "true"
