properly set password with password
we don't want the username to double as the password, because that would
be bad

--- a/apps/openvpn-as/helmrelease.yaml
+++ b/apps/openvpn-as/helmrelease.yaml
@@ -38,7 +38,7 @@ spec:
     targetPath: openvpn.users[0].user
   - kind: Secret
     name: vpn-user-kingdon
-    valuesKey: user
+    valuesKey: password
     targetPath: openvpn.users[0].password
   values:
     service:
