serve vpn.hephy.pro on the public ingress

--- a/apps/openvpn-as/helmrelease.yaml
+++ b/apps/openvpn-as/helmrelease.yaml
@@ -47,7 +47,7 @@ spec:
       gui:
         enabled: true
         hostName: vpn.hephy.pro
-        ingressClassName: internal
+        ingressClassName: public
         annotations:
           cert-manager.io/cluster-issuer: letsencrypt-production
           # kubernetes.io/ingress.class: nginx
