upstream openvpn chart should permit existing pv

--- a/apps/openvpn-as/helmrelease.yaml
+++ b/apps/openvpn-as/helmrelease.yaml
@@ -43,6 +43,8 @@ spec:
   values:
     service:
       type: LoadBalancer
+    persistence:
+      existingClaim: openvpn-openvpn-as-state
     ingress:
       gui:
         enabled: true
