some config is missing from openvpn values
These configs are not retained from the backups, it looks like they are
meant to be set declaratively (as one would hope and expect)

--- a/apps/openvpn-as/helmrelease.yaml
+++ b/apps/openvpn-as/helmrelease.yaml
@@ -41,6 +41,19 @@ spec:
     valuesKey: password
     targetPath: openvpn.users[0].password
   values:
+    openvpn:
+      config:
+        vpn.client.routing.reroute_gw: "true"
+        vpn.client.routing.reroute_dns: "true"
+        host.name: vpn.hephy.pro
+    resources:
+      limits:
+        cpu: 100m
+        memory: 128Mi
+      requests:
+        cpu: 100m
+        memory: 128Mi
+
     service:
       type: LoadBalancer
     persistence:
